src/objects/Accrual_junction__c.object
<CustomObject>
    <fields>
        <fullName>A_A_Vital__c</fullName>
        <formula>Accrual__r.A_A_VITAL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>A&amp;A Vital %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Accrual__c</fullName>
        <label>Co-op Allocation</label>
        <referenceTo>Co_Op_Allocation__c</referenceTo>
        <relationshipLabel>Associated Claims</relationshipLabel>
        <relationshipName>Accruals_and_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Amount_deducted_from_accrual__c</fullName>
        <label>Amount Deducted From Allocation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_to_Transfer__c</fullName>
        <label>Amount to Transfer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_A_A_Vital_Back__c</fullName>
        <formula>Amount_deducted_from_accrual__c  *  A_A_Vital__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charge A&amp;A Vital</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_FN_Nuage_Back__c</fullName>
        <formula>Amount_deducted_from_accrual__c  *  FN_Nuage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charge FN</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_ION_Back__c</fullName>
        <formula>Amount_deducted_from_accrual__c  *  ION__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charge ION</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_ION_Nuage_Back__c</fullName>
        <formula>Amount_deducted_from_accrual__c  *  ION_Nuage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charge ION Nuage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_ION_Optics_Back__c</fullName>
        <formula>Amount_deducted_from_accrual__c  *  ION_Optics__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charge ION-Optics</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_ION_Routing_Back__c</fullName>
        <formula>Amount_deducted_from_accrual__c  *  ION_Routing__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charge ION-Routing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_MN_Nuage_Back__c</fullName>
        <formula>Amount_deducted_from_accrual__c  *  MN_Nuage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charge MN</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FN_Nuage__c</fullName>
        <formula>Accrual__r.FN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FN %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ION_Nuage__c</fullName>
        <formula>Accrual__r.ION_NUAGE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ION Nuage %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ION_Optics__c</fullName>
        <formula>Accrual__r.ION_OPTICS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ION-Optics %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ION_Routing__c</fullName>
        <formula>Accrual__r.ION_Routing__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ION- Routing %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ION__c</fullName>
        <formula>Accrual__r.ION__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ION %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MN_Nuage__c</fullName>
        <formula>Accrual__r.MN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MN %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <formula>TEXT(Accrual__r.Partner_Name__r.Market__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Fund_Claim__c</fullName>
        <label>Co-op Claim</label>
        <referenceTo>Claim__c</referenceTo>
        <relationshipLabel>Associated Coop Allocations</relationshipLabel>
        <relationshipName>Partner_Fund_Claim</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Partner_Name__c</fullName>
        <formula>Partner_Fund_Claim__r.Partner_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment</label>
        <referenceTo>CoOp_Claim_Payment__c</referenceTo>
        <relationshipLabel>Associated Co-op Allocations</relationshipLabel>
        <relationshipName>Accrual_Claim_Junction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reimbursed_Type__c</fullName>
        <label>Clearance Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>HFLOF</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Reimbursement</fullName>
                </value>
                <value>
                    <fullName>Reimbursed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Allocation-Claim Junction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AC-{00000000}</displayFormat>
        <label>Coop Allocation Claim</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocation-Claim Junction</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>